<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="begin_tour">Begin tour!</string>
    <string name="title_activity_splashscreen">The Splash Screen</string>
    <string name="app_name">Tour of UVA Grounds</string>
    <string name="action_settings">Settings</string>
    <string name="current_destination">Current Destination:</string>
    <string name="title_activity_desination_list_screen">List of Destinations:</string>
    <string name="hello_world">Hello world!</string>
    <string name="restart_tour">Restart Tour</string>
    <string name="quit_app">Quit App</string>
    <string name="view_all_locations">View All Locations</string>
    <string name="return_to_previous">Return to Main Screen</string>
    <string name="only_view_new">View Unvisited Locations</string>
    <string name="title_activity_location_list_screen">All Tour Locations:</string>
    <string name="title_activity_end_screen">The Tour is Over!</string>
    <string name="congratulations">Congratulations! You finished!</string>
    <string name="empty_string">---blank string---</string>
    <string name="location_fact_heading">A fact about your destination:</string>
    <string name="no_current_fact">(insert location factoid here)</string>
    <string name="autopilot">Autopilot</string>
    <string name="main_fragment_button">Scroll</string>
    <string name="main_fragment_title">Main Fragment</string>
    <string name="pause_string">PAUSE ITEM</string>
    <string name="autopilot_speed">Autopilot Speed:</string>
    <string name="change_coordinates_string">Manually Edit Coordinates</string>
    <string name="title_activity_input_coordinates_dialog">InputCoordinatesDialog</string>
    <string name="title_activity_location_info_screen">Tour of UVA Grounds</string>
    <string name="location_info_title">Location Information:</string>
    <string name="main_image_description">Image of the Current Destination</string>
    <string name="location_image_description">Image of the Location</string>
    <string name="view_visited_locations">View Visited Locations</string>
    <string name="location_facts">Location Facts:</string>
    <string name="resume_tour">Resume Tour</string>
    <string name="return_to_list_screen_button">Previous Screen</string>
    <string name="total_time_spent">Time spent on the tour:</string>
    <string name="previous_screen">Previous screen</string>
    <string name="redo_tour_button">Retake the tour?</string>
    <string name="title_activity_map_test">MapTest</string>
    <string name="title_activity_tour_map">Look! A map!</string>
    <string name="title_activity_fragment_holder">FragmentHolder</string>
    <string name="title_activity_location_view">LocationView</string>

</resources>