<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainScreen" >
    
    <TextView
        android:id="@+id/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"    
        android:text="@string/current_destination"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />
     
    <TextView
        android:id="@+id/destination_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/destination"
        android:layout_centerHorizontal="true"
        android:text="@string/empty_string"
        android:textSize="18sp" />
    
    <ImageView
        android:id="@+id/location_image"
        android:layout_below="@+id/destination_name"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:contentDescription="@string/main_image_description"
        android:src="@drawable/football" />
    
    <TextView
        android:id="@+id/location_fact_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="136dp"
        android:text="@string/location_fact_heading"
        android:layout_centerHorizontal="true"
		android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/current_location_fact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/location_fact_heading"
        android:layout_marginTop="30dp"
        android:background="#C0C0C0"
        android:text="@string/no_current_fact"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/location_fact_heading"
        android:layout_centerHorizontal="true"    
        android:layout_alignRight="@+id/autopilot_speed_adjust" />

    <TextView
        android:id="@+id/current_coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/autopilot_speed_adjust"
        android:layout_alignParentLeft="true"
        android:background="#C0C0C0"
        android:gravity="left"
        android:text="@string/empty_string"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/autopilot_speed_adjust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/seekBar1"
        android:text="@string/autopilot_speed" />

    <TextView
        android:id="@+id/num_of_facts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/current_location_fact"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:text="@string/empty_string" />

    <SeekBar
        android:id="@+id/progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/current_coordinates"
        android:layout_centerHorizontal="true" />
     
</RelativeLayout>